_scss/base/_header.scss
.tmpl__header {
    max-width: $site-width-rem;
    margin: 0 auto 3em;

    .sv-jcrmenu-portlet {
        position: absolute;
        z-index: 2;
        top: 0;
        right: 0;
        left: 0;
        margin: 0;
        padding: 0;
        min-height: 43px;
        background-color: rgba($white, .9);
        border-bottom: 1px solid $border-grey;

        ul {
            margin: 0;
            padding: 50px 0 0 0;
            display: none;

            &.visible {
                display: block;
            }
            @include media( $medium-and-up ) {
                display: block;
                padding: 0 0 0 70px;
            }
        }
        li {
            position: relative;
            z-index: 1;



            @include media( $up-to-medium ) {
                display: block;
                padding: 10px $site-padding;
                border-top: 1px solid #ccc;
            }
            @include media( $medium-and-up ) {
                display: inline-block;
                padding: 10px;
            }

            a {
                @include media( $up-to-medium ) {
                    display: block;

                }
            }
            &.homeLink {
                @include media( $medium-and-up ) {
                    position: absolute;
                    top: -4px;
                    left: $site-padding;
                }
            }

            &.active:after {
                @include media( $medium-and-up ) {
                    content: "";
                    display: block;
                    position: absolute;
                    right: 0;
                    bottom: -4px;
                    left: 0;
                    height: 4px;
                    background-color: $red;
                }
            }
        }
    }

    .searchForm {

        position: absolute;
        top: 3px;
        right: $site-padding;

    }

}

.logo {

    background: {
        image: data-uri("logo.svg");
        position: 50% -18px;
        size: 900px auto;
        repeat: no-repeat;
    }
    height: 100px;

    img {
        display: none;
    }
}


.hamburger {
    position: absolute;
    top: 10px;
    left: $site-padding;
    @include imageReplace(20px, 20px);
    border: none;
    outline: none;
    background: {
        color: transparent;
        image: data-uri("hamburger.svg");
        position: 50% 50%;
        size: 16px auto;
        repeat: no-repeat;
    };
    transition: transform .2s ease;

    &.visible {
        transform: rotate(90deg);
    }

    @include media( $medium-and-up ) {
        display: none;
    }
}


.homeLink__link {
    display: block;

    @include media-min-width( $bp-medium ) {
        width: 38px;
        height: 0;
        padding-top: 30px;
        overflow: hidden;
        background: {
            image: data-uri("ekelof.svg");
            position: 50% 50%;
            repeat: no-repeat;
            size: 38px auto;
        };
    }
}



.searchForm {

    &__input {
        font: {
            size: 14px;
            weight: normal;
        }
        line-height: 14px;
        height: 32px;
        background-color: $black;
        display: block;
        border: none;
        border-radius: .5em;
        padding: 6px .2em 6px .2em;
        outline: none;
    }

    &__label {
        display: block;
        background-color: $black;
        padding: 2px 40px 2px 4px;
        border-radius: .5em;
        overflow: hidden;
        width: 30px;
        transition: width .25s ease;
        .focused & {
            width: 200px;

            .searchForm__input {
                background-color: $white;
            }
        }
    }

    button {
        position: absolute;
        top: 6px;
        right: 10px;
        @include imageReplace(20px, 20px);
        border: none;
        background: {
            color: $black;
            image: data-uri("search.svg");
            position: 50% 50%;
            size: 16px auto;
            repeat: no-repeat;
        };
    }

}

